deployment/demo-2/demo-app-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: demo-app2
spec:
  ports:
  - port: 10000
    targetPort: 10000
  selector:
    app: demo-app2
