deployment/demo-2/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 10000
      name: http
      protocol: HTTP
    hosts:
    - "demo-app.phiroict.co.nz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app
spec:
  hosts:
  - "demo-app.phiroict.co.nz"
  gateways:
  - demo-app-gateway
  http:
  - match:
    - uri:
        exact: /demo-app    
    route:
    - destination:
        host: demo-app
        port:
          number: 10000
